# console-runner

./: CMakeLists.txt  README.md
debian/: changelog  control  links  release.sh  rules
doc/: CMakeLists.txt  console-runner.rst
docker/: armel.dockerfile  armhf.dockerfile  setup.sh
src/: CMakeLists.txt  Fixes.vapi  client.vala  common.vala  kill.vala  server.vala  version.vala.in
